[workspace]
members = [
    "kgs_handler",
    "fulgurobot_db",
]

[package]
name = "fulguro_bot"
version = "1.1.0"
authors = ["Arttaaz <arttaaz@gmail.com>", "Jiriakel <jorisvdb96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono      = "0.4"
dirs        = "*"
lazy_static = "*"
fulgurobot_db = { path="fulgurobot_db" }
serenity    = "*"
kgs_handler = { path = "kgs_handler" }
