[package]
name = "fulgurobot_db"
description = "A database module for the fulgurogo discord server bot"
license = "MPL-2.0"
version = "0.4.5"
authors = ["Arttaaz <arttaaz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel      = { version = "1.4.6", features = ["sqlite"] }
dotenv      = "0.14.1"
