[package]
name = "kgs_handler"
version = "0.1.0"
authors = ["Jiriakel <jorisvdb96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "*"
futures = "0.1" # This should be removed at some point when rqwest will use the stdlib futures
tokio = "*"
serde_json = "*"
